# UBB--FMI

./: README.md
AN_1/SEM_1/: psihopedagogie_notite.txt
AN_1/SEM_2/SD/: 1mw.mw  2mw.mw  3mw.mw  4mw.mw  5mw.mw  6mw.mw
AN_1/SEM_2/psihopedagogie/: Educatia.pptx  Proiectarea curriculumui. Produse curriculare.pptx
AN_2/SEM_1/DB/: crud_formula1_2.sql  inserari_formula1_2.sql  interogari_formula1_2sql.sql  proceduri_formula1_2.sql  structuri_formula1_2.sql  testare_corect_formula1_2.sql  testare_formula1_2.sql
AN_2/SEM_1/PS/: lab2.ipynb  lab6.ipynb
AN_2/SEM_1/RC/: lab9.pptx
AN_2/SEM_1/Retele/: lab8.pkt  (+2 more)
AN_3/SEM_1/PPD/lab1/tema1cppstatic/: CMakeLists.txt  HorizontalAllocatedThreads.cpp  HorizontalAllocatedThreads.h  Sequential.cpp  Sequential.h  VerticalAllocatedThreads.cpp  VerticalAllocatedThreads.h  main.cpp
AN_3/SEM_1/PPD/lab2/temacppdinamic/: CMakeLists.txt  HorizontalAllocatedThreads.cpp  HorizontalAllocatedThreads.h  Sequential.cpp  Sequential.h  VerticalAllocatedThreads.cpp  VerticalAllocatedThreads.h  main.cpp
AN_3/SEM_1/PPD/lab3/: CMakeLists.txt  CompareFiles.cpp  CompareFiles.h  Documentatie3.docx  GenerateRandom.cpp  GenerateRandom.h  Logger.cpp  Logger.h  MPI_Variant0.cpp  MPI_Variant0.h  MPI_Variant1.cpp  MPI_Variant1.h  MPI_Variant2.cpp  MPI_Variant2.h  MPI_Variant3.cpp  MPI_Variant3.h  Numar1.txt  Numar2.txt  Numar3_MPI_V2.txt  Results.txt  main.cpp
lab134/: CosReadOnlyGUI.h  FilmeGUImodel.cpp  FilmeGUImodel.h  cosfilm.cpp  cosfilm.h  filmGUI.cpp  lab134.ui  lab134.vcxproj.filters  observer.h  service.cpp  service.h  teste.cpp  validator.cpp
(+2302 files in other folders)
